--- a/3HNM BANK/Customer Inquiries.html
+++ b/3HNM BANK/Customer Inquiries.html
@@ -69,14 +69,15 @@
     <div class="main">
       <div class="column sidebar">
         <ul>
-          <li id="dash"><a href="#">Dashboard</a></li>
-          <li id="credit"><a href="Customer Inquiries.html">Credit Card Applications</a></li>
+          <li id="credit"><a href="Credit Card Requests.html">Credit Card Applications</a></li>
           <li id="open"><a href="Open Account Request.html">Open Account Requests</a></li>
           <li id="clise"><a href="Close Account Request.html">Close Account Requests</a></li>
-          <li id="loan"><a href="Customer Inquiries.html">Loan Applications</a></li>
+          <li id="loan"><a href="Banker Loan Application.html">Loan Applications</a></li>
           <li id="inq"><a href="Customer Inquiries.html">Cusomer Inquiries</a></li>
-          <li id="reports"><a href="Customer Inquiries.html">Check Reports</a></li>
-          <li id="announcements"><a href="Customer Inquiries.html">Announcements</a></li>
+          <li id="reports"><a href="Check Reports.html">Check Reports</a></li>
+          <li id="announcements"><a href="Banker View Announcement.html">Announcements</a></li>
+          <li id="send"><a href="Banker Send Announcements.html">Send Announcements</a></li>
+
       </div>
       <!-- Header section ends  -->
       <div class="column middle">
